(css) Fix layout issues with layer selector toolbar (layered-viewer.js) Flashlight position is in viewport coordinates, add some style to the flashlight indicator (deps) Update sly to newest version

--- a/client/css/layered-viewer.css
+++ b/client/css/layered-viewer.css
@@ -13,7 +13,7 @@ body {
 
 #primary {
     z-index: 0;
-    cursor: crosshair;
+    /*cursor: crosshair;*/
 }
 
 #secondary {
